# minivim

./: .gitignore  CMakeLists.txt  README.md  main.cpp  minivim.cpp  minivim.hpp
